--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>Gianna Hassig</h1>
+<!doctype html>
+<html lang= "en">
+  <head>
+    <meta charset="charset="utf-g>
+    <title>Hassig</title>
+  </head>
+    <body>
+      <h2>
+        Gianna Hassig
+      </h2>
+    </body>
+</html>
