--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,1 +1,14 @@
-
+<!doctype html>
+<html lang= "en">
+  <head>
+    <!--<meta charset="charset="utf-g>-->
+    <meta charset= "utf-8">
+    <title>Hassig</title>
+  </head>
+    <body>
+      <h2>
+        Gianna Hassig
+      </h2>
+      <a href= "https://ghassig.github.io/portfolio/">My portfolio project</a>
+    </body>
+</html>
