--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,10 +5,9 @@
     <meta charset= "utf-8">
     <title>Hassig</title>
   </head>
-    <body>
-      <h2>
-        Gianna Hassig
-      </h2>
-      <a href= "https://ghassig.github.io/portfolio/">My portfolio project</a>
-    </body>
+  <body>
+    <h1>Gianna Hassig</h1>
+    <h4>Portfolio... Under Construction</h4>
+    <div> </div>
+  </body>
 </html>
