--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>Gianna Hassig</h1>
     <h4>Portfolio... Under Construction</h4>
-    <div> </div>
+    </br> 
+    <img scr="OIP.jpg" alt="Under Construction Sign" width="100" height="100">
   </body>
 </html>
