--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
       <h2>
         Gianna Hassig
       </h2>
-      <a href= "https://ghassig.github.io/portfolio/">My portfolio project</a>
+      <a href= "https://thebluepenguinn.github.io/ghassig.github.io/portfolio/">My portfolio project</a>
     </body>
 </html>
