--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,6 +9,6 @@
     <h1>Gianna Hassig</h1>
     <h4>Portfolio... Under Construction</h4>
     <br> 
-    <img scr="underconstructionpic.jpg" alt="Under Construction Sign" width="100" height="100">
+    <img src="underconstructionpic.jpg" alt="Under Construction Sign" width="100" height="100">
   </body>
 </html>
