--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -7,7 +7,9 @@
   <body>
     <h1>Hi, I'm Gianna!</h1>
    <p>
-
+     I'm a Computer Science honors student at High Point University who loves coding and solving problems. I enjoy immersing myself in programming and building projects that challenge me.
+     You'll often find me studying at local cafes, enjoying the productive atmosphere and yummy beverage. In my spare time, I unwind with video games and crossword puzzles. I'm also a big animal lover.
+     My goal is to use my technical skills and creative thinking to make meaningful contributions to the field of computer science while continuing to explore new technologies and challenges along the way.
    </p>
   </body>
 </html>
