--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         Gianna Hassig
       </h2>
       <a href= "https://thebluepenguinn.github.io/portfolio/">My portfolio project</a>
+      <a href= "https://thebluepenguinn.github.io/about/">About Me</a>
     </body>
 </html>
