--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <h2>
         Gianna Hassig
       </h2>
-      <a href= "https://thebluepenguinn.github.io/portfolio/">My portfolio project</a> <div></div>
-      <a href= "https://thebluepenguinn.github.io/about/">About Me</a>
+      <a href= "https://thebluepenguinn.github.io/portfolio/">My portfolio project</a> 
+      
     </body>
 </html>
