--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,5 +10,6 @@
     <h4>Portfolio... Under Construction</h4>
     <br> 
     <img src="underconstructionpic.jpg" alt="Under Construction Sign" width="100" height="100">
+    <div></div> <a href= "https://thebluepenguinn.github.io/about/">About Me</a>
   </body>
 </html>
