--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,5 +11,8 @@
     <br> 
     <img src="underconstructionpic.jpg" alt="Under Construction Sign" width="100" height="100">
     <div></div> <a href= "https://thebluepenguinn.github.io/about/">About Me</a>
+    <div></div> <a href= "https://thebluepenguinn.github.io/projects/">My Projects</a>
+    <div></div> <a href= "https://thebluepenguinn.github.io/resume/">My Resume</a>
+    <div></div> <a href= "https://thebluepenguinn.github.io/contact/">Contact Me</a>
   </body>
 </html>
