--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -1,1 +1,19 @@
+<!doctype html>
+<html lang= "en">
+  <head>
+    <meta charset= "utf-8">
+    <title>My Projects</title>
+  </head>
+  <body>
+    <h2>Project: --</h2>
+   <p>
+      
+   </p>
 
+    <h2>Project: --</h2>
+    <p></p>
+    <h2>Project: --</h2>
+    <p></p>
+    
+  </body>
+</html>
