--- a/portfolio/header.html
+++ b/portfolio/header.html
@@ -2,7 +2,7 @@
     <nav class ="navbar">
         <ul>
           <li><a href="index.html">Gianna Marie</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="about.html">About Me</a></li>
           <li><a href="projects.html">Projects</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="contact.html">Contact</a></li>
