--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,7 +10,7 @@
     <h4>Portfolio... Under Construction</h4>
     <br> 
     <img src="underconstructionpic.jpg" alt="Under Construction Sign" width="100" height="100">
-    <div></div> <a href= "https://thebluepenguinn.github.io/about/">About Me</a>
+    <div></div> <a href= "https://thebluepenguinn.github.io/portfolio/about/">About Me</a>
     <div></div> <a href= "https://thebluepenguinn.github.io/projects/">My Projects</a>
     <div></div> <a href= "https://thebluepenguinn.github.io/resume/">My Resume</a>
     <div></div> <a href= "https://thebluepenguinn.github.io/contact/">Contact Me</a>
