--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,18 +1,15 @@
 <!doctype html>
 <html lang= "en">
   <head>
-    <!--<meta charset="charset="utf-g>-->
     <meta charset= "utf-8">
     <title>Hassig</title>
+    <script src="script.js" defer></script>
   </head>
   <body>
+    <div id="header"></div>
     <h1>Gianna Hassig</h1>
-    <h4>Portfolio... Under Construction</h4>
-    <br> 
-    <img src="underconstructionpic.jpg" alt="Under Construction Sign" width="100" height="100">
-    <div></div> <a href= "https://thebluepenguinn.github.io/portfolio/about/">About Me</a>
-    <div></div> <a href= "https://thebluepenguinn.github.io/projects/">My Projects</a>
-    <div></div> <a href= "https://thebluepenguinn.github.io/resume/">My Resume</a>
-    <div></div> <a href= "https://thebluepenguinn.github.io/contact/">Contact Me</a>
+    <p>Welcome Home!</p>
+    <div id="footer"></div>
+   
   </body>
 </html>
