--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset= "utf-8">
     <title>Hassig</title>
+    <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
   </head>
   <body>
