--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -12,9 +12,9 @@
   <div id="header"></div>
   
   <main>
-		 
-    <h1>Resume</h1>
-    <p>Text</p>
+  <h1>Resume</h1>
+  <iframe src="resume.pdf" class="resume-pdf"></iframe>
+  <a href="resume.pdf" download class="download-link">Download Resume</a
   </main>
   <div id="footer"></div>
   </body>
