--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -13,8 +13,8 @@
   
   <main>
   <h1>Resume</h1>
-  <iframe src="Hassig-resume.pdf" class="resume-pdf"></iframe>
-  <a href="Hassig-resume.pdf" download class="download-link">Download Resume</a
+  <iframe src="resume-Hassig.pdf" class="resume-pdf"></iframe>
+  <a href="resume-Hassig.pdf" download class="download-link">Download Resume</a
   </main>
   <div id="footer"></div>
   </body>
