--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="header"></div>
-    <img src="about-me.jpg" alt="Gianna Hassig" class="profile-photo">
+    <img src="about-me.jpg" alt="Gianna Hassig" style="width:100%" class="profile-photo">
     <h1>Hi, I'm Gianna!</h1>
     <p>As a Computer Science honors student at High Point University, I have a deep passion for coding, problem-solving, and exploring the ever-evolving world of technology. I thrive on the challenge of building projects that push my skills and creativity, whether it's developing software applications, optimizing algorithms, or experimenting with new programming languages. My academic journey has provided me with a strong foundation in computer science principles, and I am always eager to take on complex problems that require innovative solutions. I see technology as a powerful tool for change, and my goal is to use my technical expertise and analytical thinking to make meaningful contributions to the field, whether in software development, artificial intelligence, or another exciting area of computing.</p> 
     <p>Throughout my studies, I have worked on various projects that have sharpened my programming abilities and expanded my knowledge in fields like machine learning, cybersecurity, and web development. I enjoy collaborating with peers, learning from experienced professionals, and constantly pushing myself to improve. Outside the classroom, I take advantage of coding competitions, hackathons, and personal projects to further enhance my skills. The process of problem-solving excites me, and I am always looking for opportunities to tackle real-world challenges through technology.</p> 
