--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -20,7 +20,7 @@
           </div>
           <div class="column">
             <div class="content">
-              <img src="lights.jpg" alt="placeholder" style="width:100%">
+              <img src="project2.png" alt="project 2" style="width:100%">
               <h2>Project 2: Blackjack</h2>
               <p>In this Blackjack game, I used C++ to create a simple game where the player competes against the computer (dealer). I implemented a Card class to represent individual cards and a Hand class to manage the player's and dealer's cards. The game follows classic Blackjack rules, where the player can "hit" or "stay" and the dealer must hit on 16 or lower and stay on 17 or higher. I also added a betting system where the player starts with $100 and places bets before each round, with winnings or losses affecting their balance. This project helped me understand object-oriented programming, conditionals, loops, and user input handling in C++.
               </p>
