--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset= "utf-8">
     <title>About Me</title>
+    <link rel="icon" type="image/png" href="icon.png">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
   </head>
