--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,10 +8,10 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <div id="header"></div>
-    <h1>Gianna Hassig</h1>
+    <div class="header"></div>
+    <h1 class="name">Gianna Hassig</h1>
     <p>Welcome Home!</p>
-    <div id="footer"></div>
+    <div class="footer"></div>
    
   </body>
 </html>
