--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,10 +8,9 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <div class="header"></div>
+    <header class="header navbar">
     <h1 class="name">Gianna Hassig</h1>
     <p>Welcome Home!</p>
-    <div class="footer"></div>
-   
+footer class="footer"></footer   
   </body>
 </html>
