--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,6 +11,6 @@
     <header class="header navbar">
     <h1 class="name">Gianna Hassig</h1>
     <p>Welcome Home!</p>
-footer class="footer"></footer   
+<footer class="footer"></footer   
   </body>
 </html>
