--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -10,14 +10,14 @@
 
 </head>
 <body>
-  <div id="header"></div>
+  <header class="header navbar"></header>
   
-  <main>
+  <<main class="resume-content">
   <h1>Resume</h1>
   <iframe src="resume-Hassig.pdf" class="resume-pdf"></iframe>
     <br>
   <a href="resume-Hassig.pdf" download class="download-link">Download Resume</a
   </main>
-  <div id="footer"></div>
+  <footer class="footer"></footer>
   </body>
   </html>
