--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -10,45 +10,32 @@
 </head>
 <body>
 
-  <div id="header"></div>
-  <main>
+  <header class="header navbar"></header>
+  <main class="contact-content">
     <h1>Contact Me</h1>
     <p>Text</p>
-    <div class="container">
-        <form action="action_page.php">
-          <div class="row">
-            <div class="col-25">
+    <div class=""contact-form-container"">
+        <form action="action_page.php"class="contact-form">
+          <div class="input-group">
               <label for="fname">First Name</label>
-            </div>
-            <div class="col-75">
               <input type="text" id="fname" name="firstname" placeholder="Your name..">
             </div>
-          </div>
-          <div class="row">
-            <div class="col-25">
+          <div class="input-group">
               <label for="lname">Last Name</label>
-            </div>
-            <div class="col-75">
               <input type="text" id="lname" name="lastname" placeholder="Your last name..">
             </div>
-        
-          </div>
-          <div class="row">
-            <div class="col-25">
+          <div class="input-group">
               <label for="subject">Subject</label>
-            </div>
-            <div class="col-75">
               <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
             </div>
           </div>
           <div class="row">
             <input type="submit" value="Submit">
-          </div>
         </form>
       </div>
   </main>
 
-  <div id="footer"></div>
+  <ooter class="footer"></footer>
   <script src="scripts.js"></script>
   </body>
   </html>
