--- a/portfolio/header.html
+++ b/portfolio/header.html
@@ -1,5 +1,5 @@
-<header>
-    <nav class ="navbar">
+<header class="navbar">
+    <nav>
         <ul>
           <li><a href="index.html">Gianna Marie</a></li>
           <li><a href="about.html">About Me</a></li>
