--- a/portfolio/footer.html
+++ b/portfolio/footer.html
@@ -1,7 +1,4 @@
-<footer>
-  Phone: (704) 288-6651
-|
-  Email: gianna.hassig@yahoo.com
-|
-<a href="https://github.com/thebluepenguinn" target="_blank">GitHub</a> 
+<footer class="footer">
+  Phone: (704) 288-6651 | Email: gianna.hassig@yahoo.com |
+  <a href="https://github.com/thebluepenguinn" target="_blank">GitHub</a>
 </footer>
