--- a/portfolio/footer.html
+++ b/portfolio/footer.html
@@ -1,4 +1,5 @@
 <footer class="footer">
   Phone: (704) 288-6651 | Email: gianna.hassig@yahoo.com |
   <a href="https://github.com/thebluepenguinn" target="_blank">GitHub</a>
+  | a href="https://coolors.co/user/palettes/639f8468cf2f920009e556c8"> Color Palette</a></p>
 </footer>
