--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -8,8 +8,8 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-  <header class="header">
-  <img src="about-me.jpg" alt="Gianna Hassig" class="profile-photo">
+<div id="header"></div>
+    <img src="about-me.jpg" alt="Gianna Hassig" class="profile-photo">
     <main class="about-content">
     <h1>Hi, I'm Gianna!</h1>
     <p>As a Computer Science honors student at High Point University, I have a deep passion for coding, problem-solving, and exploring the ever-evolving world of technology. I thrive on the challenge of building projects that push my skills and creativity, whether it's developing software applications, optimizing algorithms, or experimenting with new programming languages. My academic journey has provided me with a strong foundation in computer science principles, and I am always eager to take on complex problems that require innovative solutions. I see technology as a powerful tool for change, and my goal is to use my technical expertise and analytical thinking to make meaningful contributions to the field, whether in software development, artificial intelligence, or another exciting area of computing.</p> 
@@ -17,6 +17,5 @@
     <p>Beyond my academic and professional pursuits, I have a variety of interests that keep me engaged and inspired. I love spending time at local cafes, where I can focus on my studies while enjoying the energy of a productive atmosphere. In my free time, I unwind with video games and crossword puzzles, which allow me to challenge my mind in different ways. As a big animal lover, I have a deep appreciation for nature and enjoy volunteering with animal shelters whenever I can. Whether it's through my technical work or personal passions, I am always eager to learn, grow, and make a positive impact in the world around me.</p>  
   </main>
     
-<footer class="footer"></footer>
-  </body>
+<div id="footer"></div>  </body>
 </html>
