--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <header class="header navbar"></header>
+<div id="header"></div>
   <main class="contact-content">
     <h1>Contact Me</h1>
     <p>Text</p>
@@ -35,7 +35,7 @@
       </div>
   </main>
 
-  <ooter class="footer"></footer>
+<div id="footer"></div>
   <script src="scripts.js"></script>
   </body>
   </html>
