--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,9 +8,8 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <header class="header navbar">
+<div id="header"></div>
     <h1 class="name">Gianna Hassig</h1>
     <p>Welcome Home!</p>
-<footer class="footer"></footer   
-  </body>
+<div id="footer"></div>  </body>
 </html>
