--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -10,14 +10,12 @@
 
 </head>
 <body>
-  <header class="header navbar"></header>
-  
+<div id="header"></div>  
   <<main class="resume-content">
   <h1>Resume</h1>
   <iframe src="resume-Hassig.pdf" class="resume-pdf"></iframe>
     <br>
   <a href="resume-Hassig.pdf" download class="download-link">Download Resume</a
   </main>
-  <footer class="footer"></footer>
-  </body>
+<div id="footer"></div>  </body>
   </html>
