--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div id="header"></div>  
-  <<main class="resume-content">
+  <main class="resume-content">
   <h1>Resume</h1>
   <iframe src="resume-Hassig.pdf" class="resume-pdf"></iframe>
     <br>
