--- a/portfolio/footer.html
+++ b/portfolio/footer.html
@@ -1,5 +1,6 @@
 <footer class="footer">
- (704) 288-6651 | gianna.hassig@yahoo.com |
+  <a href="tel:+17042886651">Number</a> | <a href="mailto:gianna.hassig@yahoo.com">Email</a> |
   <a href="https://github.com/thebluepenguinn" target="_blank">GitHub</a>
-  | <a href="https://coolors.co/user/palettes/639f8468cf2f920009e556c8"> Color Palette</a></p>
+  | <a href="https://coolors.co/palette/cee5f2-accbe1-7c98b3-637081-536b78"> Color Palette</a></p>
 </footer>
+
