--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
 <div id="header"></div>
-    <h1 class="name">Gianna Hassig</h1>
-    <p>Welcome Home!</p>
-<div id="footer"></div>  </body>
+    <main class="home-container">
+        <h1 class="name">Gianna Hassig</h1>
+        <p>Welcome Home!</p>
+    </main>
+    <div id="footer"></div>
+  </body>
 </html>
