--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,7 +11,7 @@
 <div id="header"></div>
     <main class="home-container">
         <h1 class="name">Gianna Hassig</h1>
-        <p>Welcome Home!</p>
+        <h2>Welcome Home!</h2>
     </main>
     <div id="footer"></div>
   </body>
