--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,7 +10,7 @@
   <body>
 <div id="header"></div>
     <main class="home-container">
-        <h1 class="name">Gianna Hassig</h1>
+       <img src="icon.png" alt="icon" class="icon-photo">
         <h2>Welcome Home!</h2>
     </main>
     <div id="footer"></div>
