--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
 <div id="header"></div>
-    <main class="home-container">
+    <div class="container">
        <img src="icon.png" alt="icon" class="icon-photo">
         <h2>Welcome Home!</h2>
-    </main>
+    </div>
     <div id="footer"></div>
   </body>
 </html>
