--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -14,8 +14,8 @@
   <main class="contact-content">
     <h1>Contact Me</h1>
    
-    <div class=""contact-form-container"">
-        <form action="action_page.php"class="contact-form">
+    <div class="contact-form-container">
+        <form class="contact-form">
           <div class="input-group">
               <label for="fname">First Name</label>
               <input type="text" id="fname" name="firstname" placeholder="Your name..">
