--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -11,11 +11,13 @@
 </head>
 <body>
 <div id="header"></div>  
+  <div class="container">
   <main class="resume-content">
   <h1>Resume</h1>
   <iframe src="resume-Hassig.pdf" class="resume-pdf"></iframe>
     <br>
   <a href="resume-Hassig.pdf" download class="download-link">Download Resume</a
+     </div>
   </main>
 <div id="footer"></div>  </body>
   </html>
