--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,6 +14,7 @@
        <img src="icon.png" alt="icon" class="icon-photo">
       <br>
         <h2>Welcome Home!</h2>
+      <h2>This is my Website Portfoio</h2>
     </div>
     <div id="footer"></div>
   </body>
