--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -15,7 +15,7 @@
           <div class="column">
             <div class="content">
               <img src="project1.png" alt="project 1" class="project pic">
-              <h2>Project 1: ParallelSort</h2>
+              <h2> <a href=ParallelSort.py" download "Project 1: ParallelSort</a></h2>
               <p>This Python program allows users to efficiently store and organize product information. Users can enter product names along with their corresponding prices, creating two separate lists to hold this data. The program continues accepting input until the user enters "done," signaling the end of data entry. This project showcases fundamental programming concepts such as lists, loops, user input handling, and sorting algorithms. It's a great example of structuring data in a user-friendly format while demonstrating Python's versatility in organizing and displaying information.
               </p>
             </div>
