--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -15,7 +15,7 @@
           <div class="column">
             <div class="content">
               <img src="project1.png" alt="project 1" class="project pic">
-              <h2> <a href=ParallelSort.py" download "Project 1: ParallelSort"</a></h2>
+              <h2> <a href=ParallelSort.py" download>Project 1: ParallelSort</a></h2>
               <p>This Python program allows users to efficiently store and organize product information. Users can enter product names along with their corresponding prices, creating two separate lists to hold this data. The program continues accepting input until the user enters "done," signaling the end of data entry. This project showcases fundamental programming concepts such as lists, loops, user input handling, and sorting algorithms. It's a great example of structuring data in a user-friendly format while demonstrating Python's versatility in organizing and displaying information.
               </p>
             </div>
@@ -24,7 +24,7 @@
             <div class="content">
               <div class="container">
               <img src="project2.png" alt="project 2"  class="project pic">
-              <h2> <a href=Project 2.zip" download "Project 2: Blackjack"</a></h2>
+              <h2> <a href=Project 2.zip" download>Project 2: Blackjack</a></h2>
               <p>In this Blackjack game, I used C++ to create a simple game where the player competes against the computer (dealer). I implemented a Card class to represent individual cards and a Hand class to manage the player's and dealer's cards. The game follows classic Blackjack rules, where the player can "hit" or "stay" and the dealer must hit on 16 or lower and stay on 17 or higher. I also added a betting system where the player starts with $100 and places bets before each round, with winnings or losses affecting their balance. This project helped me understand object-oriented programming, conditionals, loops, and user input handling in C++.
               </p>
             </div>
