--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -16,7 +16,7 @@
   <h1>Resume</h1>
   <iframe src="resume-Hassig.pdf" class="resume-pdf"></iframe>
     <br>
-  <a href="resume-Hassig.pdf" download class="download-link">Download Resume</a
+  <a href="resume-Hassig.pdf" download class="download-link">Download Resume</a>
      </div>
   </main>
 <div id="footer"></div>  </body>
