--- a/which-witch/index.html
+++ b/which-witch/index.html
@@ -1,23 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>personality quiz</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-<!-- change font      -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> 
-    <script type="text/javascript" src="js/app.js"></script>
-   
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Which Witch Quiz</title>
+  <link rel="stylesheet" href="which-witch-main/style.css">
 </head>
-
 <body>
-    <section class="startingSection">
-        <h1>Which Witch?</h1>
-			<p>Description of Quiz</p>
-        <button id="start">Start quiz</button>
-    </section>
-
+  <script src="which-witch-main/script.js"></script>
 </body>
-
 </html>
