--- a/which-witch/index.html
+++ b/which-witch/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Which Witch Quiz</title>
-  <link rel="stylesheet" href="which-witch-main/style.css">
+  <!-- Correct the stylesheet URL -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <script src="which-witch-main/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
