--- a/which-witch/index.html
+++ b/which-witch/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Which Witch Quiz</title>
   <!-- Correct the stylesheet URL -->
-  <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
