--- a/which-witch/index.html
+++ b/which-witch/index.html
@@ -6,9 +6,16 @@
   <title>Which Witch Quiz</title>
   <!-- Correct the stylesheet URL -->
 <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="script.js"></script>
+</head>
+<body>
+  
+  <body>
+    <section class="startingSection">
+        <h1>Which Witch?</h1>
+			<p>Description of Quiz</p>
+        <button id="start">Start Quiz</button>
+    </section>
 </body>
 </html>
