--- a/which-witch/index.html
+++ b/which-witch/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="pragma" content="no-cache" />
+<meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate" />
+
   <title>Which Witch Quiz</title>
   <!-- Correct the stylesheet URL -->
 <link rel="stylesheet" type="text/css" href="style.css">
