--- a/which-witch/index.html
+++ b/which-witch/index.html
@@ -8,9 +8,9 @@
 
   <title>Which Witch Quiz</title>
   <!-- Correct the stylesheet URL -->
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="style.css?v=1.1">
+<script src="script.js?v=1.1"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="script.js"></script>
 </head>
 <body>
   
