--- a/which-witch/index.html
+++ b/which-witch/index.html
@@ -3,22 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="pragma" content="no-cache" />
-<meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate" />
-
+  <meta http-equiv="pragma" content="no-cache" />
+  <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate" />
+  
   <title>Which Witch Quiz</title>
-  <!-- Correct the stylesheet URL -->
-<link rel="stylesheet" type="text/css" href="style.css?v=1.1">
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="script.js?v=1.1"></script>
+  <!-- Correct stylesheet URL -->
+  <link rel="stylesheet" type="text/css" href="style.css?v=1.1">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="script.js?v=1.1" defer></script>
 </head>
 <body>
-  
-  <body>
+  <div id="introSection">
     <section class="startingSection">
-        <h1>Which Witch?</h1>
-			<p>Description of Quiz</p>
-        <button id="start">Start Quiz</button>
+      <h1>Which Witch?</h1>
+      <p>Description of Quiz</p>
+      <button id="start">Start Quiz</button>
     </section>
+  </div>
 </body>
 </html>
