--- a/which-witch/index.html
+++ b/which-witch/index.html
@@ -16,6 +16,7 @@
   <div id="introSection">
     <section class="startingSection">
       <h1>Which Witch?</h1>
+      <img src="result_img/quiz_desc.png" alt="Quiz Description Image" class="quizDescriptionImage">
       <p>Description of Quiz</p>
       <button id="start">Start Quiz</button>
     </section>
